fix(4-grid): adjust spacing

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@
 
   --space-32-56: clamp(2rem, 0.4418rem + 6.6482vw, 3.5rem);
   --space-60-74: clamp(3.75rem, 2.8411rem + 3.8781vw, 4.625rem);
+  --space-56-102: clamp(3.5rem, 0.5135rem + 12.7424vw, 6.375rem);
 
   --radius-8: var(--space-100);
 
@@ -140,7 +141,7 @@ article {
   display: grid;
   place-items: center;
   min-height: 100vh;
-  padding: var(--space-700)
+  padding: var(--space-56-102)
     max(var(--space-32-56), calc(50% - var(--_max-width) / 2));
 }
 
